<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!-- ========================================================= -->
    <!-- Spring Boot Parent                                        -->
    <!-- ========================================================= -->

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.4</version>
        <relativePath/>
    </parent>

    <!-- ========================================================= -->
    <!-- Project Coordinates                                       -->
    <!-- ========================================================= -->

    <groupId>com.bookingeventflow</groupId>
    <artifactId>booking-event-flow</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>BookingEventFlow</name>
    <description>
        A production-style event booking platform demonstrating
        concurrency control, optimistic locking, idempotency,
        distributed workflows, resilience, and asynchronous
        communication.
    </description>

    <!-- ========================================================= -->
    <!-- Properties                                                 -->
    <!-- ========================================================= -->

    <properties>
        <java.version>21</java.version>
        <booking-event-flow.version>0.0.1-SNAPSHOT</booking-event-flow.version>
        <archunit.version>1.4.1</archunit.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <testcontainers.version>1.19.3</testcontainers.version>
        <docker-java.version>3.4.2</docker-java.version>
    </properties>

    <!-- ========================================================= -->
    <!-- Dependency Management                                      -->
    <!-- ========================================================= -->

    <dependencyManagement>
        <dependencies>

            <!-- Project Modules -->
            <dependency>
                <groupId>com.bookingeventflow</groupId>
                <artifactId>common-domain</artifactId>
                <version>${booking-event-flow.version}</version>
            </dependency>

            <!-- ArchUnit -->
            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit-junit5</artifactId>
                <version>${archunit.version}</version>
            </dependency>

            <!-- MapStruct -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <!-- Testcontainers BOM -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Docker Java Client (Override versions) -->
            <dependency>
                <groupId>com.github.docker-java</groupId>
                <artifactId>docker-java-api</artifactId>
                <version>${docker-java.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>com.github.docker-java</groupId>
                <artifactId>docker-java-transport-zerodep</artifactId>
                <version>${docker-java.version}</version>
                <scope>test</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <!-- ========================================================= -->
    <!-- Reactor Modules                                            -->
    <!-- ========================================================= -->

    <modules>
        <module>libraries</module>
        <module>services</module>
    </modules>

</project>